# controller/dto.go
@@ -38,6 +38,7 @@ type CreateOrderRequest struct {
 	ReservationID int64     `json:"reservation_id"`
 	OrderNo       string    `json:"order_no"`
 	ExpiresAt     time.Time `json:"expires_at"`
+	PurchaseToken string    `json:"purchase_token"`
 }
 
 type PayOrderRequest struct {
